<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notBoredBackground"
    tools:context=".NavigationActivity">

    <TextView
        android:id="@+id/tvNotBored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notBored"
        android:textStyle="bold"
        android:textColor="@color/title"
        android:textSize="@dimen/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/tvParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_margin="25dp"
        android:text="@string/participants"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNotBored"
        app:layout_constraintVertical_bias="0.316" />

    <EditText
        android:id="@+id/etParticipants"
        android:layout_width="@dimen/zeroMargin"
        android:layout_height="48dp"
        android:layout_margin="25dp"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:inputType="number"
        android:minHeight="@dimen/heightMin"
        android:autofillHints="phone"
        android:hint="@string/zeroValue"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParticipants"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="@dimen/zeroMargin"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/title"
        android:text="@string/loginButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etParticipants" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/termsAndConditions"
        android:textColor="@color/blue"
        android:textSize="@dimen/paragraph"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

</androidx.constraintlayout.widget.ConstraintLayout>