<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notBoredBackground"
    tools:context=".NavigationActivity">

    <Button
        android:id="@+id/btnTryAnother"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/title"
        android:text="@string/tryAnother"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <ImageButton
        android:id="@+id/btBackList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/notBoredBackground"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/tvActivitiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="tvActivitiesTitle"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/textSizeNotBored"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/tvTypeApi"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_format_list_bulleted_24"
        android:drawablePadding="5dp"
        android:text="tvTypeApi"
        android:textSize="@dimen/term"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <TextView
        android:id="@+id/tvActivitiesApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="tvActivitiesApi"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/textSizeNotBored"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/tvParticipantsApi"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="tParticipantsApi"
        android:textAlignment="textEnd"
        android:textSize="@dimen/term"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/tvParticipants"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:text="@string/participants"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textSize="@dimen/term"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/tvPriceApi"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="tvPriceApi"
        android:textAlignment="textEnd"
        android:textSize="@dimen/term"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_attach_money_24"
        android:drawablePadding="5dp"

        android:text="@string/price"
        android:textSize="@dimen/term"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />


</androidx.constraintlayout.widget.ConstraintLayout>